# agentic-ai-evaluator

./: .dockerignore  COMMIT_MESSAGES_LANGFUSE.md  README.md  docker-compose.yml  gunicorn_config.py  main.py  pgadmin_queries.sql  pyproject.toml  pytest.ini  requirements.txt  setup_postgres_memory.py  start_docker.bat  start_docker.sh  start_production.bat  start_production.sh  test_trace_example.py  tfidf_vectorizer.pkl
docker/: .dockerignore  Dockerfile  Dockerfile.all-in-one  Dockerfile.qdrant  Dockerfile.worker  README.md  docker-compose.dev.yml  docker-compose.qdrant.yml  docker-compose.yml  supervisord.conf
scripts/: migrate_qdrant_collections.py  seed_langfuse_demo.py  seed_prompts_langfuse.py  setup_postgres_memory.py
src/Agents/: evaluation_crew.py  goal_reasoner.py  output_evaluator.py
src/Upload/: file_validator.py  form_extractor.py  multiple_handler.py
src/api/: __init__.py
src/core/: __init__.py  config.py  constants.py  errors.py  secrets_loader.py
src/database/: analysis_dense_retriever.py  analysis_search.py  delete.py  dense_retriever.py  hybrid_search.py  insert.py  insert_analysis.py  list_reports.py  postgres_memory_schema.py  sparse_retriever.py
src/domain/: __init__.py
src/formatter/: chunking.py  formatter.py  json_helper.py
src/generator/: embedding.py  encoder.py  model_loader.py  qdrant_load.py  redis_pool.py
src/infrastructure/: __init__.py
src/ingestion/: file_validator.py  form_extractor.py  multiple_handler.py
src/prompt/: analysis_template.py  graph_suggestion_template.py  prompt_template.py
test/: README.md  __init__.py  test_simple.py
(+141 files in other folders)
