[project]
name = "agentic-ai-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.186.1",
    "deepeval>=3.4.9",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
]
